--- a/frontend_typescript/package.json
+++ b/frontend_typescript/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
+    "antd": "^5.25.4",
     "ethers": "^6.14.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
