--- a/backend_rust/Cargo.toml
+++ b/backend_rust/Cargo.toml
@@ -1,16 +1,14 @@
-# food_traceability_platform/backend_rust/Cargo.toml
 [package]
 name = "backend_rust"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-actix-web = "4"                                       # Web 框架
-tokio = { version = "1", features = ["macros", "rt-multi-thread"] } # 异步运行时
-serde = { version = "1.0", features = ["derive"] }    # 序列化/反序列化
-serde_json = "1.0"                                    # JSON 支持 for Serde
+actix-web = "4"
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "mysql", "chrono", "json" ] } # 数据库交互 (MySQL, Tokio runtime, Chrono types, JSON type)
 dotenvy = "0.15"                                      # 加载 .env 文件
 chrono = { version = "0.4", features = ["serde"] }    # 日期和时间处理，启用 serde 支持
