--- a/backend_rust/Cargo.toml
+++ b/backend_rust/Cargo.toml
@@ -12,6 +12,9 @@ serde_json = "1.0"
 sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "mysql", "chrono", "json" ] } # 数据库交互 (MySQL, Tokio runtime, Chrono types, JSON type)
 dotenvy = "0.15"                                      # 加载 .env 文件
 chrono = { version = "0.4", features = ["serde"] }    # 日期和时间处理，启用 serde 支持
+log = "0.4"
+env_logger = "0.11" # 或最新版
+actix-cors = "0.7" # 或最新版
 # ------------------------------------------------------------------
 # argon2 = "0.3"                                        # 密码哈希处理
 # bcrypt = "0.12"                                       # 密码哈希处理
